--- a/src/Article.css
+++ b/src/Article.css
@@ -3,27 +3,29 @@
   margin: 0rem;
 }
 
-main {
-  padding: 1rem 2rem 1rem 2rem;
+.article {
+  width: min(80%, 31.25rem); /*500px*/
+  padding: 2rem;
+  margin: 0rem auto 0rem auto;
+  /*
+  Parent Div's Width = Child Div's Width + Padding + Border + Margin
+  375px = width: min(80%, 31.25rem), so (300px) + (32px + 32px) + 0px + margin: 0rem auto 0rem auto, so (5.5px + 5.5px)
+  */
 }
 
-h2 {
-  margin-bottom: 0.5rem;
+.article__content {
+  margin-top: 0.5rem;
+  margin-bottom: 0.8rem;
 }
 
-p {
-  margin-bottom: 1rem;
-}
-
-button {
-  background-color: black;
+.article__read-more-button {
   color: white;
-  border-style: solid;
-  border-color: black;
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
-  cursor: pointer;
-}
+  font-size: 14px;
 
-button:active {
-  background-color: rgba(0,0,0,0.7);
+  padding: 0.5rem 0.8rem 0.5rem 0.8rem;
+  background-color: rgb(50,164,219);
+
+  border-style: solid;
+  border-color: rgb(50,164,219);
+  border-radius: 10px;
 }
