--- a/src/Password/Password.css
+++ b/src/Password/Password.css
@@ -3,47 +3,67 @@
   margin: 0rem;
 }
 
-.login {
-  width: 12.5rem;
+body {
+  background-color: black;
+}
+
+main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.log-in {
+  width: 200px;
   padding: 1rem;
   margin-inline: auto;
   /*
   Parent Div's Width = Child Div's Width + Padding + Border + Margin
-  375px = 200px + (16px + 16px) + margin-inline: auto, so (71.5px + 71.5px) 
+  375px = 200px + (16px + 16px) + 0px + margin-inline: auto, so (71.5px + 71.5px) 
   */
+
+  background-color: lightcoral;
+  border-radius: 10px;
 }
 
-.login__box {
-  font-size: 15px;
-  padding: 0.5rem;
-  border-style: solid;
-  border-width: 0.05rem;
-  border-radius: 0.5rem;
+.log-in__input-container {
   margin-bottom: 0.5rem;
 }
 
-.login__box::placeholder {
+.log-in__input {
+  color: black;
+  font-size: 15px;
+  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  border-style: solid;
+  border-width: 0.05rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+  outline: none;
+}
+
+.log-in__input::placeholder {
   color: black;
   font-size: 15px;
 }
 
-.login__eye-button {
-  background-color: white;
+.log-in__icon-button {
+  color: cornflowerblue;
   padding: 0rem;
   border: none;
-  cursor: pointer;
-}
-
-.login__eye {
+  background-color: lightcoral;
   margin-left: 0.5rem;
-  color: black;
 }
 
-.login__button {
-  color: white;
-  background-color: black;
+.log-in__button {
+  color: lightcoral;
+  background-color: cornflowerblue;
+
   padding: 0.3rem 0.5rem 0.3rem 0.5rem;
   border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
+  border-radius: 10px;
+  margin-top: 0.5rem;
+
 }
+
+
