--- a/src/Article.css
+++ b/src/Article.css
@@ -2,30 +2,28 @@
   box-sizing: content-box;
   margin: 0rem;
 }
-
+body {
+  height: 1000px;
+}
 .article {
-  width: min(80%, 31.25rem); /*500px*/
-  padding: 2rem;
-  margin: 0rem auto 0rem auto;
+  width: min(70%, 500px);
+  padding: 0rem 1.5rem 0rem 1.5rem;
+  margin: 1rem auto 0rem auto;
   /*
   Parent Div's Width = Child Div's Width + Padding + Border + Margin
-  375px = width: min(80%, 31.25rem), so (300px) + (32px + 32px) + 0px + margin: 0rem auto 0rem auto, so (5.5px + 5.5px)
+  375px = 262.50px + (24px + 24px) + 0px + margin: 1rem auto 0rem auto, so (32.25px + 32.25px)
   */
 }
 
-.article__content {
-  margin-top: 0.5rem;
-  margin-bottom: 0.8rem;
+.article__title {
+  margin-bottom: 0.5rem;
 }
 
-.article__read-more-button {
+.article__button {
   color: white;
-  font-size: 14px;
-
+  background-color: orange;
   padding: 0.5rem 0.8rem 0.5rem 0.8rem;
-  background-color: rgb(50,164,219);
-
-  border-style: solid;
-  border-color: rgb(50,164,219);
+  border: none;
   border-radius: 10px;
+
 }
