--- a/src/Password/Password.css
+++ b/src/Password/Password.css
@@ -3,63 +3,46 @@
   margin: 0rem;
 }
 
-main {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .log-in {
-  width: 200px;
-  padding: 1rem;
-  margin-inline: auto;
-  /*
-  Parent Div's Width = Child Div's Width + Padding + Border + Margin
-  375px = 200px + (16px + 16px) + 0px + margin-inline: auto, so (71.5px + 71.5px) 
-  */
-
-  background-color: lightcoral;
-  border-radius: 10px;
-}
-
-.log-in__input-container {
-  margin-bottom: 0.5rem;
+  width: 250px;
+  margin: 2rem auto 0rem auto;
 }
 
 .log-in__input {
   color: black;
   font-size: 15px;
   padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  outline: none;
+
   border-style: solid;
   border-width: 0.05rem;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
-.log-in__input::placeholder {
-  color: black;
-  font-size: 15px;
+.log-in__username {
+  margin-bottom: 0.5rem;
 }
 
-.log-in__icon-button {
-  color: cornflowerblue;
+.log-in__password-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  margin-bottom: 0.9rem;
+}
+
+.log-in__eye-icon-button {
   padding: 0rem;
   border: none;
-  background-color: lightcoral;
-  margin-left: 0.5rem;
+  background-color: white;
+  margin-left: 1rem;
 }
 
 .log-in__button {
-  color: lightcoral;
-  background-color: cornflowerblue;
-
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  color: white;
+  background-color: black;
+  padding: 0.5rem 1rem 0.5rem 1rem;
   border: none;
   border-radius: 10px;
-  margin-top: 0.5rem;
-
 }
-
-
