--- a/src/PasswordStrength/PasswordStrength.css
+++ b/src/PasswordStrength/PasswordStrength.css
@@ -3,53 +3,20 @@
   margin: 0rem;
 }
 
-.password-strength {
-  width: 15rem;
-  padding: 1.5rem;
-  margin: 2rem auto 0rem auto;
-  /*
-  Parent Div's Width = Child Div's Width + Padding + Border + Margin
-  375px = 240px + (24px + 24px) + 0px + margin: 2rem auto 0rem auto, so (43.5px + 43.5px)
-  */
-}
-
-.password-strength__password-container {
+.password {
+  width: 300px;
+  margin: 10rem auto 0rem auto;
   text-align: center;
-
-  margin-bottom: 1rem;
 }
 
-.password-strength__password-input {
-  color: black;
-  padding: 0.4rem 0.6rem 0.4rem 0.6rem;
-}
-
-.password-strength__password-input::placeholder {
-  color: black;
-}
-
-.password-strength__four-bars-container {
+.password__password-strength-container {
   display: flex;
   flex-direction: row;
+
+  margin-top: 2rem;
 }
 
-.password-strength__bar {
-  width: 25%;
-  height: 1.3rem;
-}
-
-.password-strength__bar--red-color {
-  background-color: rgba(255,0,0,0.2);
-}
-
-.password-strength__bar--yellow-color {
-  background-color: rgb(255, 238, 0, 0.2);
-}
-
-.password-strength__bar--light-green-color {
-  background-color: rgb(141, 255, 2, 0.2);
-}
-
-.password-strength__bar--dark-green-color {
-  background-color: rgb(50, 131, 25, 0.2);
+.password__password-strength-bar {
+  width: 100px;
+  height: 10px;
 }
